--- a/public/index.html
+++ b/public/index.html
@@ -20,27 +20,41 @@
     rel="stylesheet">
 
     <!-- Css Styles -->
-    <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
-    <link rel="stylesheet" href="css/font-awesome.min.css" type="text/css">
-    <link rel="stylesheet" href="css/elegant-icons.css" type="text/css">
-    <link rel="stylesheet" href="css/jquery-ui.min.css" type="text/css">
-    <link rel="stylesheet" href="css/magnific-popup.css" type="text/css">
-    <link rel="stylesheet" href="css/owl.carousel.min.css" type="text/css">
-    <link rel="stylesheet" href="css/slicknav.min.css" type="text/css">
-    <link rel="stylesheet" href="css/style.css" type="text/css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/bootstrap.min.css" type="text/css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/font-awesome.min.css" type="text/css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/elegant-icons.css" type="text/css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/jquery-ui.min.css" type="text/css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/magnific-popup.css" type="text/css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/owl.carousel.min.css" type="text/css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/slicknav.min.css" type="text/css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/style.css" type="text/css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+    integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <script src="js/jquery-3.3.1.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/jquery.magnific-popup.min.js"></script>
-    <script src="js/jquery-ui.min.js"></script>
-    <script src="js/mixitup.min.js"></script>
-    <script src="js/jquery.countdown.min.js"></script>
-    <script src="js/jquery.slicknav.js"></script>
-    <script src="js/owl.carousel.min.js"></script>
-    <script src="js/jquery.nicescroll.min.js"></script>
-    <script src="js/main.js"></script> 
+    <script src="%PUBLIC_URL%/js/jquery-3.3.1.min.js"></script>
+    <script src="%PUBLIC_URL%/js/bootstrap.min.js"></script>
+    <script src="%PUBLIC_URL%/js/jquery.magnific-popup.min.js"></script>
+    <script src="%PUBLIC_URL%/js/jquery-ui.min.js"></script>
+    <script src="%PUBLIC_URL%/js/mixitup.min.js"></script>
+    <script src="%PUBLIC_URL%/js/jquery.countdown.min.js"></script>
+    <script src="%PUBLIC_URL%/js/jquery.slicknav.js"></script>
+    <script src="%PUBLIC_URL%/js/owl.carousel.min.js"></script>
+    <script src="%PUBLIC_URL%/js/jquery.nicescroll.min.js"></script>
+    <script src="%PUBLIC_URL%/js/main.js"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+    integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+    crossorigin="anonymous"></script>
   </body>
 </html>
